<resources>
    <string name="app_name">API Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="park_attractions">Park attractions</string>
    <string name="video_games">Video games</string>
    <string name="tv_shows">Tv shows</string>
    <string name="short_films">Short films</string>
    <string name="films">Films</string>
    <string name="all">All</string>
    <string name="my">My</string>
    <string name="disney_character">Disney character</string>
    <string name="character">Character</string>
    <string name="log_in">Log-in</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_password">Enter your password</string>
    <string name="sing_up">Sing-up</string>
    <string name="empty_email">Empty email</string>
    <string name="empty_password">Empty password</string>
    <string name="saved">Saved</string>
    <string name="user_not_found">User not found</string>
</resources>