<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            app:layout_constraintBottom_toTopOf="@id/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/films_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/films"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/films_chip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/films_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/short_films_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/short_films"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/films_chip" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/short_films_chip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/short_films_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_shows_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_shows"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/short_films_chip" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/tv_shows_chip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_shows_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/video_games_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_games"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_shows_chip" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/video_games_chip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/video_games_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/park_attractions_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/park_attractions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/video_games_chip" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/park_attractions_chip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/park_attractions_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>